[package]
name = "cp-mod-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent-side orchestration bridge — additive Module for oplog, stream tee, command intake, and heartbeat"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-render.workspace = true
cp-wire = { path = "../cp-wire" }
cp-oplog = { path = "../cp-oplog" }
log = "0.4"
nix = { version = "0.30", default-features = false, features = ["fs"] }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
