[package]
name = "cp-mod-callback"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-mod-console = { path = "../cp-mod-console" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
globset.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
