[package]
name = "cp-mod-console"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "cp-console-server"
path = "src/server/main.rs"

[dependencies]
cp-base.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
libc = "0.2"

[lints]
workspace = true
