[package]
name = "cp-mod-git"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-render.workspace = true
cp-vault = { path = "../cp-vault" }
crossterm.workspace = true
serde_json.workspace = true
regex.workspace = true

[lints]
workspace = true
