[package]
name = "cp-mod-github"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
ratatui.workspace = true
crossterm.workspace = true
regex.workspace = true
sha2.workspace = true
secrecy = { version = "0.10", features = ["serde"] }

[lints]
workspace = true
