[package]
name = "cp-mod-logs"
version = "0.1.0"
edition = "2024"

[dependencies]
cp-base.workspace = true
cp-mod-memory = { path = "../cp-mod-memory" }
cp-mod-queue = { path = "../cp-mod-queue" }
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
