[package]
name = "cp-mod-logs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-mod-memory = { path = "../cp-mod-memory" }
cp-mod-queue = { path = "../cp-mod-queue" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[lints]
workspace = true
