[package]
name = "cp-mod-ocr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-render.workspace = true
serde_json.workspace = true
reqwest = { workspace = true }
cp-mod-utilities.workspace = true
log = "0.4"

[lints]
workspace = true
