[package]
name = "cp-mod-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-vault = { path = "../cp-vault" }
cp-mod-logs = { path = "../cp-mod-logs" }
cp-render.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
cp-mod-utilities.workspace = true
reqwest = { workspace = true }
notify.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
serde_yaml.workspace = true
log = "0.4"

[lints]
workspace = true
