[package]
name = "cp-oplog"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot oplog — append-only, fsync'd write-ahead log (tier ①)"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-wire = { path = "../cp-wire" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
