[package]
name = "cp-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone orchestration backend — discovers, observes, and commands agent fleets"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-wire = { path = "../cp-wire" }
cp-oplog = { path = "../cp-oplog" }
nix = { version = "0.30", features = ["signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tiny_http = "0.12"
# Filesystem event watcher (kqueue/inotify) — wakes the SSE producer the instant
# an agent appends to its oplog, so a delta reaches the browser in single-digit
# ms instead of waiting on a poll tick (design doc I12: inotify primary).
notify = { workspace = true }

[dev-dependencies]
# Test-only: the integration suite boots a real agent and drives its command
# intake + body store to validate the backend↔agent seam against real
# artifacts. The backend never depends on the agent crate at runtime.
cp-mod-bridge = { path = "../cp-mod-bridge" }
tempfile = "3"

[lints]
workspace = true
