[package]
name = "cp-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone orchestration backend — discovers, observes, and commands agent fleets"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-wire = { path = "../cp-wire", features = ["openapi"] }
cp-oplog = { path = "../cp-oplog" }
utoipa = "5"
nix = { version = "0.30", features = ["signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tiny_http = "0.12"
# Filesystem event watcher (kqueue/inotify) — wakes the SSE producer the instant
# an agent appends to its oplog, so a delta reaches the browser in single-digit
# ms instead of waiting on a poll tick (design doc I12: inotify primary).
notify = { workspace = true }
# Cross-platform pseudo-terminal — lets the supervisor spawn the `cp` TUI
# agent attached to a PTY (the binary calls `enable_raw_mode()` and needs a
# real tty, so it cannot run with null stdio). portable-pty encapsulates the
# openpty / controlling-tty / setsid dance in a safe API, so no `unsafe` is
# written here (the workspace forbids it).
portable-pty = "0.9"
# Spreadsheet parsing for the Finder table preview (T282): calamine reads the
# binary workbook formats (xlsx/xls/xlsb/ods) and `csv` the delimited-text ones
# (csv/tsv) with proper quote handling. Both feed the `/fs/sheet` endpoint that
# renders any spreadsheet as a table.
calamine = "0.26"
csv = "1"
# Password hashing — Argon2id (OWASP current recommendation). Pure-Rust,
# memory-hard. Default features bring password-hash PHC format + OsRng for salt
# generation. Used by services/auth for credential storage (FR-01, NFR-01).
argon2 = "0.5"
# Auth database — users, sessions, agent ACL stored in a dedicated SQLite file
# at orchestrator level (~/.context-pilot/orchestrator/auth.db). Bundled build
# (same as cp-mod-entities) so no system libsqlite dependency.
rusqlite = { workspace = true }
# HTTP client — GitHub Releases API + binary download for the release manager
# (services/releases.rs). Reuses the workspace dep (blocking + json features).
reqwest = { workspace = true }
# Vendored OpenSSL for cross-compilation (reqwest → native-tls → openssl-sys).
# Without this, openssl-sys falls back to pkg-config and fails in musl cross
# containers. Same pattern as the tui crate (8837333).
openssl = { workspace = true }

[dev-dependencies]
# Test-only: the integration suite boots a real agent and drives its command
# intake + body store to validate the backend↔agent seam against real
# artifacts. The backend never depends on the agent crate at runtime.
cp-mod-bridge = { path = "../cp-mod-bridge" }
tempfile = "3"

[lints]
workspace = true
