[package]
name = "cp-web-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot web transport — axum + WebSocket server for the Nestor headless mode"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
log = "0.4"

[lints]
workspace = true
