[package]
name = "cp-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot orchestration wire protocol (shared, I/O-free)"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true
