[package]
name = "cp-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot orchestration wire protocol (shared, I/O-free)"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
crc32c = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]

[lints]
workspace = true
